add ssl, update tomcat