@@ -4,14 +4,12 @@ ENV CATALINA_HOME=/tomcat
 
 RUN mkdir /tomcat
 
-WORKDIR $CATALINA_HOME
-
 RUN apt-get update && apt-get install -y --no-install-recommends \
   wget \
   && rm -rf /var/lib/apt/lists/*
 
 ENV TOMCAT_MAJOR 8
-ENV TOMCAT_VERSION 8.5.23
+ENV TOMCAT_VERSION 8.5.24
 
 ENV TOMCAT_TGZ_URLS \
 # https://issues.apache.org/jira/browse/INFRA-8753?focusedCommentId=14735394#comment-14735394
@@ -31,13 +29,26 @@ RUN set -eux; \
     fi; \
   done; \
   [ -n "$success" ]; \
-  tar -xvf tomcat.tar.gz --strip-components=1; \
-  rm bin/*.bat; \
-  rm -Rf webapps/*; \
+  tar -xvf tomcat.tar.gz --strip-components=1 -C /tomcat; \
+  rm tomcat/bin/*.bat; \
+  rm -Rf tomcat/webapps/*; \
   rm tomcat.tar.gz*
 
 COPY server.xml /tomcat/conf/server.xml
 
-ENV JAVA_OPTS=" -XX:+PrintFlagsFinal -XX:+PrintGCDetails -XX:NativeMemoryTracking=summary -XX:+UnlockExperimentalVMOptions -XX:+UseCGroupMemoryLimitForHeap -XX:+ExitOnOutOfMemoryError "    
+ENV JAVA_OPTS=" -XX:NativeMemoryTracking=summary -XX:+UnlockExperimentalVMOptions -XX:+UseCGroupMemoryLimitForHeap -XX:+ExitOnOutOfMemoryError "    
+ENV CATALINA_TMPDIR=/tmp
+
+#generate certificate
+COPY ssl.jks /tomcat/
+
+#create tomcat user/group
+RUN groupadd tomcat && useradd -s /bin/bash -M -d /tomcat -g tomcat tomcat \
+  && chown -R tomcat:tomcat /tomcat \
+  && chmod 400 /tomcat/ssl.jks
+
+USER tomcat:tomcat
+
+WORKDIR $CATALINA_HOME
 
 CMD ["bin/catalina.sh", "run"]
